Updated url of the view

--- a/courses/templates/courses.html
+++ b/courses/templates/courses.html
@@ -11,7 +11,7 @@
             <div class="col-md-12">
                 <h1>All Courses</h1>
                 <ul class="breadcrumb">
-                  <li><a href="/">Home</a> <span class="divider">/</span></li>
+                  <li><a href="{% url 'home' %}">Home</a> <span class="divider"></span></li>
                   <li class="active">All  Courses</li>
                 </ul>
             </div>
