--- a/registration/templates/login.html
+++ b/registration/templates/login.html
@@ -10,7 +10,7 @@
 
             <div class="main">
 
-                <h3>Please Log In, or <a href="/register">Sign Up</a></h3>
+                <h3>Please Log In, or <a href="{% url 'register' %}">Sign Up</a></h3>
                 <div class="row">
                     <div class="col-xs-12 col-sm-12 col-md-12">
                         <a href="#" class="btn btn-lg btn-primary btn-block">Facebook</a>
