--- a/courses/templates/courses.html
+++ b/courses/templates/courses.html
@@ -55,58 +55,54 @@
                     {% if courses %}
                         {% for course in courses %}
                             <div class="strip-courses">
-                        <div class="title-course">
-                            <h3>Administration <img src="{% static 'img/new.png' %}" alt="New"></h3>
-                            <ul>
-                                <li><i class="icon-calendar"></i> Start date: {{ course.start_date | date:"F j, Y" }}</li>
-                                <li><i class="icon-bookmark"></i> ID: {{ course.id }}</li>
-                            </ul>
-                        </div>
-                        <div class="description">
-                            <p>{{ course.details | safe | slice:":500" }}</p>
-                            <ul>
-                                <li><i class="icon-book"></i> 10 Lessons</li>
-                                <li><i class="icon-reorder"></i> Level {{ course.level }}</li>
-                            </ul>
-                            <a href="{% url 'details' course.id %}" class="button_medium button-align-2">Read more </a>
-                        </div>
-                    </div><!-- end strip-->
+                                <div class="title-course">
+                                    <h3>Administration <img src="{% static 'img/new.png' %}" alt="New"></h3>
+                                    <ul>
+                                        <li><i class="icon-calendar"></i> Start
+                                            date: {{ course.start_date | date:"F j, Y" }}</li>
+                                        <li><i class="icon-bookmark"></i> ID: {{ course.id }}</li>
+                                    </ul>
+                                </div>
+                                <div class="description">
+                                    <p>{{ course.details | safe | slice:":500" }}</p>
+                                    <ul>
+                                        <li><i class="icon-book"></i> 10 Lessons</li>
+                                        <li><i class="icon-reorder"></i> Level {{ course.level }}</li>
+                                    </ul>
+                                    <a href="{% url 'details' course.id %}" class="button_medium button-align-2">Read more </a>
+                                </div>
+                            </div><!-- end strip-->
                         {% endfor %}
+
                     {% else %}
                         <p>No course found</p>
                     {% endif %}
+
                     <hr>
 
-{#                    <div class="text-center">#}
-{#                        <ul class="pagination">#}
-{#                            <li><a href="#">Prev</a></li>#}
-{#                            <li class="active"><a href="#">1</a></li>#}
-{#                            <li><a href="#">2</a></li>#}
-{#                            <li><a href="#">3</a></li>#}
-{#                            <li><a href="#">Next</a></li>#}
-{#                        </ul>#}
-{#                    </div><!-- end pagination-->#}
-{#                #}
-
-                {% if is_paginated %}
-                     <div class="text-center">
-                        <ul class="pagination">
-                            <span class="step-links" style="text-align: center !important;">
-                                {% if courses.has_previous %}
+                    {% if is_paginated %}
+                        <div class="text-center">
+                            <ul class="pagination">
+                                {% if page_obj.has_previous %}
                                     <li><a href="?page={{ page_obj.previous_page_number }}">Prev</a></li>
+                                {% else %}
+                                    <li class="disabled"><span>Prev</span></li>
                                 {% endif %}
-
-                                <span class="current">
-                                    Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}
-                                </span>
-
+                                {% for i in paginator.page_range %}
+                                    {% if page_obj.number == i %}
+                                        <li class="active"><span>{{ i }} <span class="sr-only">(current)</span></span></li>
+                                    {% else %}
+                                        <li><a href="?page={{ i }}">{{ i }}</a></li>
+                                    {% endif %}
+                                {% endfor %}
                                 {% if page_obj.has_next %}
                                     <li><a href="?page={{ page_obj.next_page_number }}">Next</a></li>
+                                {% else %}
+                                    <li class="disabled"><span>Next</span></li>
                                 {% endif %}
-                            </span>
-                         </ul>
-                    </div>
-                {% endif %}
+                            </ul>
+                        </div>
+                    {% endif %}
 
                 </div><!-- end col right-->
 
