--- a/registration/templates/profile.html
+++ b/registration/templates/profile.html
@@ -2,6 +2,8 @@
 
 {% extends 'master.html' %}
 
+{% load staticfiles %}
+
 {% block body %}
 
     <div class="container">
@@ -15,6 +17,10 @@
                 </ul>
             </div>
 
+            <!-- =========================Start Col left section ============================= -->
+
+            {% include 'sidebar.html' %} }
+
             <!-- =========================Start Col right section ============================= -->
             <section class="col-md-8 col-sm-8">
                 <div class="col-right">
@@ -23,7 +29,6 @@
                     <div id="message-contact"></div>
 
                     {% if user_profile %}
-
                         <div class="row">
                             <div class="col-md-6">
                                 <label>Username <span class="required">* </span></label>
@@ -62,10 +67,7 @@
                                 <input type="submit" value="Submit" class="button_medium">
                             </div>
                         </div>
-
                     {% endif %}
-
-                        <hr>
 
                 </div><!-- end col right-->
             </section>
