--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -12,7 +12,7 @@
      <div class="row" id="main-boxes">
     	<div class="col-md-4 col-sm-4">
         	<div class="box-style-2 green">
-            	<a href="courses" title="All Courses">
+            	<a href="{% url 'courses' %}" title="All Courses">
                 	<img src="{% static 'img/icon-home-course.png' %}" alt="">
                     <h3>Courses</h3>
                     <p>Lorem ipsum dolor sit amet, dicta aliquip ad vix, ne sit everti corpora. Qui cu eros feugiat, elitr iudico ad pri.</p>
@@ -22,7 +22,7 @@
 
         <div class="col-md-4 col-sm-4">
         	<div class="box-style-2 orange">
-            	<a href="contact.html" title="Apply">
+            	<a href="" title="Apply">
                 	<img src="{% static 'img/icon-home-apply.png' %}" alt="">
                     <h3>Apply now</h3>
                     <p>Lorem ipsum dolor sit amet, dicta aliquip ad vix, ne sit everti corpora. Qui cu eros feugiat, elitr iudico ad pri.</p>
@@ -32,7 +32,7 @@
 
         <div class="col-md-4 col-sm-4">
         	<div class="box-style-2 red">
-            	<a href="contact.html" title="Plan a visit">
+            	<a href="" title="Plan a visit">
                 	<img src="{% static 'img/icon-home-visit.png' %}" alt="">
                     <h3>Plan a visit</h3>
                     <p>Lorem ipsum dolor sit amet, dicta aliquip ad vix, ne sit everti corpora. Qui cu eros feugiat, elitr iudico ad pri.</p>
