--- a/home/templates/menu.html
+++ b/home/templates/menu.html
@@ -259,14 +259,14 @@
                 </div><!-- End Item Container -->
             </li><!-- End Item -->
 
-            <li><a href="blog.html" class="nodrop-down">Blog</a></li>
+            <li><a href="" class="nodrop-down">Blog</a></li>
 
             <li class="drop-normal"><a href="javascript:void(0)" class="drop-down">Simple drop</a>
                 <div class="drop-down-container normal">
                     <ul>
-                        <li><a href="about-us.html" title="About">About</a></li>
-                        <li><a href="all-courses.html" title="All courses">All Courses</a></li>
-                        <li><a href="course-detail.html" title="Course detail">Course detail</a></li>
+                        <li><a href="" title="About">About</a></li>
+                        <li><a href="{% url 'courses' %}" title="All courses">All Courses</a></li>
+                        <li><a href="" title="Course detail">Course detail</a></li>
                     </ul>
                 </div><!-- End dropdown normal -->
             </li>
@@ -291,14 +291,14 @@
                             <h5>Questions?</h5>
                             <p>An utinam reprimique duo, putant mandamus cu qui. Autem possim his cu, quodsi
                                 nominavi fabellas ut sit, mea ea ullum epicurei.</p>
-                            <p><a href="contact.html" class="button_red_small">Read more</a></p>
+                            <p><a href="" class="button_red_small">Read more</a></p>
                         </div><!-- End col-md-4 -->
 
                         <div class="col-md-4">
                             <h5>Apply now</h5>
                             <p>An utinam reprimique duo, putant mandamus cu qui. Autem possim his cu, quodsi
                                 nominavi fabellas ut sit, mea ea ullum epicurei.</p>
-                            <p><a href="contact.html" class="button_red_small" title="Contact">Contact us</a>
+                            <p><a href="" class="button_red_small" title="Contact">Contact us</a>
                             </p>
                         </div><!-- End col-md-4 -->
 
