--- a/home/templates/slider.html
+++ b/home/templates/slider.html
@@ -103,7 +103,7 @@
                          data-speed="300"
                          data-start="500"
                          data-easing="easeOutExpo" data-end="8800" data-endspeed="300" data-endeasing="easeInSine"><a
-                            href="all-courses.html" class="button_large">Read more</a></div>
+                            href="{% url 'courses' %}" class="button_large">Read more</a></div>
                 </li>
                 <!-- THE FIFTH SLIDE -->
                 <li data-transition="slideleft" data-slotamount="1" data-masterspeed="300"
