--- a/registration/templates/register.html
+++ b/registration/templates/register.html
@@ -18,7 +18,7 @@
 
             <!-- =========================Start Col left section ============================= -->
 
-            s{% include 'sidebar.html' %}
+            {% include 'sidebar.html' %}
 
             <!-- =========================Start Col right section ============================= -->
             <section class="col-md-8 col-sm-8">
