--- a/home/templates/master.html
+++ b/home/templates/master.html
@@ -14,7 +14,6 @@
 
 <!-- Favicons-->
 <link rel="shortcut icon" href="{% static 'img/favicon.ico' %}" type="image/x-icon"/>
-{#<link rel="apple-touch-icon" type="image/x-icon" href="{% static 'img/apple-touch-icon-57x57-precomposed.png' %}">#}
 <link rel="apple-touch-icon" type="image/x-icon" sizes="72x72" href="{% static 'img/apple-touch-icon-72x72-precomposed.png' %}">
 <link rel="apple-touch-icon" type="image/x-icon" sizes="114x114" href="{% static 'img/apple-touch-icon-114x114-precomposed.png' %}">
 <link rel="apple-touch-icon" type="image/x-icon" sizes="144x144" href="{% static 'img/apple-touch-icon-144x144-precomposed.png' %}">
@@ -112,12 +111,9 @@
                     scripta eruditi scriptorem et nam.</p>
 
                 <div id="message-newsletter"></div>
-                <form method="post" action="" name="newsletter" id="newsletter"
-                      class="form-inline">
-                    <input name="email_newsletter" id="email_newsletter" type="email" value="" placeholder="Your Email"
-                           class="form-control">
-                    <button id="submit-newsletter" class="button_medium add-bottom-20"
-                            style="top:2px; position:relative"> Subscribe
+                <form method="post" action="" name="newsletter" id="newsletter" class="form-inline">
+                    <input name="email_newsletter" id="email_newsletter" type="email" value="" placeholder="Your Email" class="form-control">
+                    <button id="submit-newsletter" class="button_medium add-bottom-20" style="top:2px; position:relative"> Subscribe
                     </button>
                 </form>
             </div>
