--- a/home/templates/menu.html
+++ b/home/templates/menu.html
@@ -15,16 +15,17 @@
                         <div class="col-md-3">
                             <h4>Quick links</h4>
                             <ul class="list-menu">
-                                <li><a href="all-courses.html" title="All courses">All courses</a></li>
-                                <li><a href="course-detail.html" title="Course detail">Course detail</a></li>
-                                <li><a href="staff.html" title="Meet the team">Meet the team</a></li>
-                                <li><a href="contact.html" title="Apply for a course">Apply for a course</a></li>
-                                <li><a href="about-us.html" title="About">About </a></li>
-                                <li><a href="news-events.html" title="News">News</a></li>
-                                <li><a href="contact.html" title="Contact">Ask for more information</a></li>
+                                <li><a href="" title="All courses">All courses</a></li>
+                                <li><a href="" title="Course detail">Course detail</a></li>
+                                <li><a href="" title="Meet the team">Meet the team</a></li>
+                                <li><a href="" title="Apply for a course">Apply for a course</a></li>
+                                <li><a href="" title="About">About </a></li>
+                                <li><a href="" title="News">News</a></li>
+                                <li><a href="" title="Contact">Ask for more information</a></li>
                             </ul>
-                            <p><a href="all-courses.html" title="Courses" class="button_medium add-bottom-20">View all
-                                courses</a></p>
+                            <p>
+                                <a href="" title="Courses" class="button_medium add-bottom-20">View all courses</a>
+                            </p>
                         </div>
 
                         <div class="col-md-9">
@@ -33,19 +34,19 @@
                                     <h5><a href="#"><i class="icon-book"></i>Administration</a> (10)</h5>
                                     <p>An utinam reprimique duo, putant mandamus cu qui. Autem possim his cu, quodsi
                                         nominavi fabellas ut sit, mea ea ullum epicurei.</p>
-                                    <p><a href="course-detail.html" class="button_red_small">Read more</a></p>
+                                    <p><a href="" class="button_red_small">Read more</a></p>
                                 </div>
                                 <div class="col-md-4">
                                     <h5><a href="#"><i class="icon-book"></i>Business</a> (08)</h5>
                                     <p>An utinam reprimique duo, putant mandamus cu qui. Autem possim his cu, quodsi
                                         nominavi fabellas ut sit, mea ea ullum epicurei.</p>
-                                    <p><a href="course-detail.html" class="button_red_small">Read more</a></p>
+                                    <p><a href="" class="button_red_small">Read more</a></p>
                                 </div>
                                 <div class="col-md-4">
                                     <h5><a href="#"><i class="icon-book"></i>Communication</a> (05)</h5>
                                     <p>An utinam reprimique duo, putant mandamus cu qui. Autem possim his cu, quodsi
                                         nominavi fabellas ut sit, mea ea ullum epicurei.</p>
-                                    <p><a href="course-detail.html" class="button_red_small">Read more</a></p>
+                                    <p><a href="" class="button_red_small">Read more</a></p>
                                 </div>
                             </div><!-- End row -->
 
@@ -54,19 +55,19 @@
                                     <h5><a href="#"><i class="icon-book"></i>Computing</a> (10)</h5>
                                     <p>An utinam reprimique duo, putant mandamus cu qui. Autem possim his cu, quodsi
                                         nominavi fabellas ut sit, mea ea ullum epicurei.</p>
-                                    <p><a href="course-detail.html" class="button_red_small">Read more</a></p>
+                                    <p><a href="" class="button_red_small">Read more</a></p>
                                 </div>
                                 <div class="col-md-4">
                                     <h5><a href="#"><i class="icon-book"></i>Consueling</a> (08)</h5>
                                     <p>An utinam reprimique duo, putant mandamus cu qui. Autem possim his cu, quodsi
                                         nominavi fabellas ut sit, mea ea ullum epicurei.</p>
-                                    <p><a href="course-detail.html" class="button_red_small">Read more</a></p>
+                                    <p><a href="" class="button_red_small">Read more</a></p>
                                 </div>
                                 <div class="col-md-4">
                                     <h5><a href="#"><i class="icon-book"></i>Education</a> (05)</h5>
                                     <p>An utinam reprimique duo, putant mandamus cu qui. Autem possim his cu, quodsi
                                         nominavi fabellas ut sit, mea ea ullum epicurei.</p>
-                                    <p><a href="course-detail.html" class="button_red_small">Read more</a></p>
+                                    <p><a href="" class="button_red_small">Read more</a></p>
                                 </div>
                             </div><!-- End row -->
 
@@ -84,36 +85,36 @@
                         <div class="col-md-3">
                             <h5>Degrees</h5>
                             <ul class="list-menu">
-                                <li><a href="all-courses.html" title="All courses">Prospect</a></li>
-                                <li><a href="all-courses.html" title="All courses">Mission</a></li>
-                                <li><a href="all-courses.html" title="All courses">President of the College</a></li>
+                                <li><a href="" title="All courses">Prospect</a></li>
+                                <li><a href="" title="All courses">Mission</a></li>
+                                <li><a href="" title="All courses">President of the College</a></li>
                             </ul>
                         </div>
 
                         <div class="col-md-3">
                             <h5>Bacherlors</h5>
                             <ul class="list-menu">
-                                <li><a href="all-courses.html" title="All courses">Quick Facts</a></li>
-                                <li><a href="all-courses.html" title="All courses">Mission</a></li>
-                                <li><a href="all-courses.html" title="All courses">President of the College</a></li>
+                                <li><a href="" title="All courses">Quick Facts</a></li>
+                                <li><a href="" title="All courses">Mission</a></li>
+                                <li><a href="" title="All courses">President of the College</a></li>
                             </ul>
                         </div>
 
                         <div class="col-md-3">
                             <h5>Masters</h5>
                             <ul class="list-menu">
-                                <li><a href="all-courses.html" title="All courses">Quick Facts</a></li>
-                                <li><a href="all-courses.html" title="All courses">Mission</a></li>
-                                <li><a href="all-courses.html" title="All courses">President of the College</a></li>
+                                <li><a href="" title="All courses">Quick Facts</a></li>
+                                <li><a href="" title="All courses">Mission</a></li>
+                                <li><a href="" title="All courses">President of the College</a></li>
                             </ul>
                         </div>
 
                         <div class="col-md-3">
                             <h5>Courses</h5>
                             <ul class="list-menu">
-                                <li><a href="all-courses.html" title="All courses">Quick Facts</a></li>
-                                <li><a href="all-courses.html" title="All courses">Mission</a></li>
-                                <li><a href="all-courses.html" title="All courses">President of the College</a></li>
+                                <li><a href="" title="All courses">Quick Facts</a></li>
+                                <li><a href="" title="All courses">Mission</a></li>
+                                <li><a href="" title="All courses">President of the College</a></li>
                             </ul>
                         </div>
 
@@ -130,15 +131,15 @@
                         <div class="col-md-3">
                             <h4>Quick links</h4>
                             <ul class="list-menu">
-                                <li><a href="all-courses.html" title="All courses">All courses</a></li>
-                                <li><a href="course-detail.html" title="Course detail">Course detail</a></li>
-                                <li><a href="staff.html" title="Meet the team">Meet the team</a></li>
-                                <li><a href="contact.html" title="Apply for a course">Apply for a course</a></li>
-                                <li><a href="about-us.html" title="About">About </a></li>
-                                <li><a href="news-events.html" title="News">News</a></li>
-                                <li><a href="contact.html" title="Contact">Ask for more information</a></li>
+                                <li><a href="" title="All courses">All courses</a></li>
+                                <li><a href="" title="Course detail">Course detail</a></li>
+                                <li><a href="" title="Meet the team">Meet the team</a></li>
+                                <li><a href="" title="Apply for a course">Apply for a course</a></li>
+                                <li><a href="" title="About">About </a></li>
+                                <li><a href="" title="News">News</a></li>
+                                <li><a href="" title="Contact">Ask for more information</a></li>
                             </ul>
-                            <p><a href="all-courses.html" title="Courses" class="button_medium add-bottom-20">View all
+                            <p><a href="" title="Courses" class="button_medium add-bottom-20">View all
                                 courses</a></p>
                         </div>
 
@@ -160,7 +161,7 @@
                                             <h5>Ms. Annie Ann <em>Management</em></h5>
                                             <p>An utinam reprimique duo, putant mandamus cu qui. Autem possim his cu,
                                                 quodsi nominavi fabellas ut sit, mea ea ullum epicurei.</p>
-                                            <p><a href="staff.html" class="button_red_small" title="staff">Read more</a>
+                                            <p><a href="" class="button_red_small" title="staff">Read more</a>
                                             </p>
                                         </div>
 
@@ -171,7 +172,7 @@
                                             <h5>Ms. Annie Ann <em>Business</em></h5>
                                             <p>An utinam reprimique duo, putant mandamus cu qui. Autem possim his cu,
                                                 quodsi nominavi fabellas ut sit, mea ea ullum epicurei.</p>
-                                            <p><a href="staff.html" class="button_red_small" title="staff">Read more</a>
+                                            <p><a href="" class="button_red_small" title="staff">Read more</a>
                                             </p>
                                         </div>
 
@@ -182,7 +183,7 @@
                                             <h5>Ms. Annie Ann <em>Administration</em></h5>
                                             <p>An utinam reprimique duo, putant mandamus cu qui. Autem possim his cu,
                                                 quodsi nominavi fabellas ut sit, mea ea ullum epicurei.</p>
-                                            <p><a href="staff.html" class="button_red_small" title="staff">Read more</a>
+                                            <p><a href="" class="button_red_small" title="staff">Read more</a>
                                             </p>
                                         </div>
 
@@ -227,34 +228,20 @@
                 <!-- Begin Item -->
                 <div class="drop-down-container" id="icon-menu">
                     <div class="row">
-                        <div class="col-md-3 "><a href="about-us.html" title="About "><i
-                                class="icon-building icon-3x"></i>About </a></div>
-                        <div class="col-md-3"><a href="about-us.html" title="Academics"><i
-                                class="icon-flag icon-3x"></i>Academics</a></div>
-                        <div class="col-md-3"><a href="all-courses.html" title="All courses"><i
-                                class="icon-list icon-3x"></i>All courses </a></div>
-                        <div class="col-md-3"><a href="course-detail.html" title="Course detail"><i
-                                class="icon-book icon-3x"></i>Course detail</a></div>
-                        <div class="col-md-3"><a href="staff.html" title="Staff page"><i class="icon-group icon-3x"></i>Staff
-                            page</a></div>
-                        <div class="col-md-3 "><a href="contact.html" title="Contact"><i
-                                class="icon-envelope icon-3x"></i>Contact</a></div>
-                        <div class="col-md-3"><a href="contact.html" title="Plan a visit"><i
-                                class="icon-eye-open icon-3x"></i>Plan a visit</a></div>
-                        <div class="col-md-3"><a href="news-events.html" title="News"><i
-                                class="icon-chevron-right icon-3x"></i>News</a></div>
-                        <div class="col-md-3"><a href="blog.html" title="Blog"><i class="icon-comments-alt icon-3x"></i>Blog</a>
-                        </div>
-                        <div class="col-md-3"><a href="blog_post.html" title="Single Post"><i
-                                class="icon-comments icon-3x"></i>Single Post</a></div>
-                        <div class="col-md-3"><a href="typography.html" title="Typography"><i
-                                class="icon-font icon-3x"></i>Typography</a></div>
-                        <div class="col-md-3"><a href="javascripts.html" title="Javascript"><i
-                                class="icon-code icon-3x"></i>Javascript</a></div>
-                        <div class="col-md-3"><a href="gallery.html" title="gallery"><i
-                                class=" icon-picture icon-3x"></i>Photo/Video Gallery</a></div>
-                        <div class="col-md-3"><a href="events_calendar.html" title="calendar"><i
-                                class=" icon-calendar icon-3x"></i>Events calendar</a></div>
+                        <div class="col-md-3"><a href="" title="About "><i class="icon-building icon-3x"></i>About </a></div>
+                        <div class="col-md-3"><a href="" title="Academics"><i class="icon-flag icon-3x"></i>Academics</a></div>
+                        <div class="col-md-3"><a href="" title="All courses"><i class="icon-list icon-3x"></i>All courses </a></div>
+                        <div class="col-md-3"><a href="" title="Course detail"><i class="icon-book icon-3x"></i>Course detail</a></div>
+                        <div class="col-md-3"><a href="" title="Staff page"><i class="icon-group icon-3x"></i>Staffpage</a></div>
+                        <div class="col-md-3"><a href="" title="Contact"><i class="icon-envelope icon-3x"></i>Contact</a></div>
+                        <div class="col-md-3"><a href="" title="Plan a visit"><i class="icon-eye-open icon-3x"></i>Plan a visit</a></div>
+                        <div class="col-md-3"><a href="" title="News"><i class="icon-chevron-right icon-3x"></i>News</a></div>
+                        <div class="col-md-3"><a href="" title="Blog"><i class="icon-comments-alt icon-3x"></i>Blog</a></div>
+                        <div class="col-md-3"><a href="" title="Single Post"><i class="icon-comments icon-3x"></i>Single Post</a></div>
+                        <div class="col-md-3"><a href="" title="Typography"><i class="icon-font icon-3x"></i>Typography</a></div>
+                        <div class="col-md-3"><a href="" title="Javascript"><i class="icon-code icon-3x"></i>Javascript</a></div>
+                        <div class="col-md-3"><a href="" title="gallery"><i class=" icon-picture icon-3x"></i>Photo/Video Gallery</a></div>
+                        <div class="col-md-3"><a href="" title="calendar"><i class=" icon-calendar icon-3x"></i>Events calendar</a></div>
                     </div><!-- End row -->
                 </div><!-- End Item Container -->
             </li><!-- End Item -->
